Add success feedback to footer newsletter form

--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,11 @@
             rel="noopener"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="https://discord.com/" class="social-link" target="_blank" rel="noopener"
+          <a
+            href="https://discord.com/"
+            class="social-link"
+            target="_blank"
+            rel="noopener"
             ><i class="fab fa-discord"></i
           ></a>
           <a
@@ -78,11 +82,25 @@
 
       <div class="footer-newsletter">
         <h3 class="newsletter-title">Stay Updated</h3>
-        <p class="newsletter-description">Subscribe to our newsletter for the latest updates.</p>
-        <form class="newsletter-form">
+        <p class="newsletter-description">
+          Subscribe to our newsletter for the latest updates.
+        </p>
+
+        <!-- Newsletter form with feedback -->
+        <form class="newsletter-form no-loading">
           <div class="input-group">
-            <input type="email" class="newsletter-input" placeholder="Enter your email" required />
-            <button type="submit" class="newsletter-btn"><i class="fas fa-paper-plane"></i></button>
+            <input
+              type="email"
+              class="newsletter-input"
+              placeholder="Enter your email"
+              required
+            />
+            <button type="submit" class="newsletter-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
+          </div>
+          <div class="newsletter-feedback">
+            <p class="feedback-message"></p>
           </div>
         </form>
       </div>
@@ -90,7 +108,9 @@
 
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p class="copyright">&copy; 2025 Pixel Phantoms. All rights reserved.</p>
+        <p class="copyright">
+          &copy; 2025 Pixel Phantoms. All rights reserved.
+        </p>
         <div class="footer-bottom-links">
           <a href="pages/privacy.html" class="bottom-link">Privacy</a> |
           <a href="pages/terms.html" class="bottom-link">Terms</a> |
