--- a/footer.html
+++ b/footer.html
@@ -13,36 +13,26 @@
           <img src="assets/logo.png" alt="Pixel Phantoms Logo" />
           <span class="brand-name neon-text">Pixel Phantoms</span>
         </div>
+
         <p class="footer-description">
           A community of passionate developers,<br />
           designers, and creators building amazing<br />
           digital experiences.
         </p>
+
         <div class="social-links dynamic-signals">
-          <a
-            href="https://github.com/sayeeg-11/Pixel_Phantoms"
-            class="social-link"
-            target="_blank"
-            rel="noopener"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/pixelphantoms_"
-            class="social-link"
-            target="_blank"
-            rel="noopener"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://discord.com/" class="social-link" target="_blank" rel="noopener"
-            ><i class="fab fa-discord"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/company/pixel-phantoms/"
-            class="social-link"
-            target="_blank"
-            rel="noopener"
-            ><i class="fab fa-linkedin"></i
-          ></a>
+          <a href="https://github.com/sayeeg-11/Pixel_Phantoms" class="social-link" target="_blank" rel="noopener">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instagram.com/pixelphantoms_" class="social-link" target="_blank" rel="noopener">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://discord.com/" class="social-link" target="_blank" rel="noopener">
+            <i class="fab fa-discord"></i>
+          </a>
+          <a href="https://www.linkedin.com/company/pixel-phantoms/" class="social-link" target="_blank" rel="noopener">
+            <i class="fab fa-linkedin"></i>
+          </a>
         </div>
       </div>
 
@@ -56,6 +46,7 @@
             <li><a href="events.html">Events</a></li>
           </ul>
         </div>
+
         <div class="link-group">
           <h3 class="link-group-title">Community</h3>
           <ul class="link-list">
@@ -65,6 +56,7 @@
             <li><a href="pages/join-us.html">Join Us</a></li>
           </ul>
         </div>
+
         <div class="link-group">
           <h3 class="link-group-title">Support</h3>
           <ul class="link-list">
@@ -78,11 +70,20 @@
 
       <div class="footer-newsletter">
         <h3 class="newsletter-title">Stay Updated</h3>
-        <p class="newsletter-description">Subscribe to our newsletter for the latest updates.</p>
+        <p class="newsletter-description">
+          Subscribe to our newsletter for the latest updates.
+        </p>
         <form class="newsletter-form">
           <div class="input-group">
-            <input type="email" class="newsletter-input" placeholder="Enter your email" required />
-            <button type="submit" class="newsletter-btn"><i class="fas fa-paper-plane"></i></button>
+            <input
+              type="email"
+              class="newsletter-input"
+              placeholder="Enter your email"
+              required
+            />
+            <button type="submit" class="newsletter-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
           </div>
         </form>
       </div>
@@ -90,7 +91,8 @@
 
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p class="copyright">&copy; 2025 Pixel Phantoms. All rights reserved.</p>
+        © <span id="currentYear"></span> Pixel Phantoms. All rights reserved.
+
         <div class="footer-bottom-links">
           <a href="pages/privacy.html" class="bottom-link">Privacy</a> |
           <a href="pages/terms.html" class="bottom-link">Terms</a> |
